# 2026-p1-rayaninaus-dev

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
