[project]
name = "2026-p1-rayaninaus-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "rayaninaus-dev",email = "rayaninaus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
